<resources>
    <string name="app_name">Calculator</string>
    <string name="cancel_sign">c</string>
    <string name="equal">=</string>
    <string name="multi_sign">x</string>
    <string name="cancel">C</string>
    <string name="decimal_sign">.</string>
    <string name="sub_sign">-</string>
    <string name="two">2</string>
    <string name="one">1</string>
    <string name="six">6</string>
    <string name="three">3</string>
    <string name="five">5</string>
    <string name="nine">9</string>
    <string name="eight">8</string>
    <string name="div_sign">÷</string>
    <string name="four">4</string>
    <string name="seven">7</string>
    <string name="zero">0</string>
    <string name="add_sign">+</string>
    <string name="equals">=</string>

    <!-- Message for textview in case of errors  -->
    <string name="computationError">Error</string>
    <string name="error">Error</string>
    <string name="erse"><![CDATA[<-]]></string>
</resources>
